# glue-aladin

./: pyproject.toml  tox.ini
.github/workflows/: ci_workflows.yml
glue_aladin/: __init__.py  aladin_lite.py  data_viewer.py
glue_aladin/tests/: test_viewer.py
